<resources>
    <string name="app_name">Memory</string>
    <string name="startGame">Juga!</string>
    <string name="moreInfo">Info</string>
    <string name="Wellcome">Benvingut al món del Memory</string>
    <string name="surrender">Em Rendeixo</string>
    <string name="boringMessage">Missatge avorrit per l\'splashScreen API versions less than 31</string>
    <string name="totalCardsReversed">Total Tarjetes Girades:</string>
    <string name="currentPlayer">Jugador actual:</string>
    <string name="points">Punts:</string>
    <string name="CleanDB">Netejar DB</string>
    <string name="ReadPoints">Info punts</string>
    <string name="login">Log In</string>
    <string name="logout">Log Out</string>
    <string name="email">email</string>
    <string name="email2">Email:</string>
    <string name="password">password</string>
    <string name="Signup">Sign up</string>
    <string name="VerifyEmail">Please, verify your email</string>
    <string name="loginNoValidEmailPassword">Email or Password not valid</string>
    <string name="forum">Forum</string>
    <string name="SendMessage">send a message</string>
    <string name="MPStart">MP Iniciar</string>
    <string name="MPConnect">MP Connectar</string>
    <string name="NoGamesAvailable">No hi ha jocs disponibles</string>
    <string name="MatchesList">Available matches</string>
    <string name="user">User:</string>
    <string name="matchKey" translatable="false">Match Key:</string>
</resources>