<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
    <data>
        <variable
            name="gameViewModel"
            type="cat.udl.gtidic.course2223.teacher.memory.viewmodels.GameViewModel" />
    </data>
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".views.GameActivity">

        <Button
            android:id="@+id/finishButon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:text="@string/surrender"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="16dp"
            android:orientation="horizontal"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <Button
                    android:id="@+id/button00"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@{gameViewModel.game.getCard(0,0).publicValue()}"
                    android:onClick="@{() -> gameViewModel.cardClicked(0,0)}"
                    android:enabled="@{!gameViewModel.game.getCard(0,0).alreadyMatched}"
                    tools:text="A"
                    android:textSize="34sp" />

                <Button
                    android:id="@+id/button10"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@{gameViewModel.game.getCard(1,0).publicValue()}"
                    android:onClick="@{() -> gameViewModel.cardClicked(1,0)}"
                    android:enabled="@{!gameViewModel.game.getCard(1,0).alreadyMatched}"
                    tools:text="A"
                    android:textSize="34sp" />

                <Button
                    android:id="@+id/button20"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@{gameViewModel.game.getCard(2,0).publicValue()}"
                    android:onClick="@{() -> gameViewModel.cardClicked(2,0)}"
                    android:enabled="@{!gameViewModel.game.getCard(2,0).alreadyMatched}"
                    tools:text="B"
                    android:textSize="34sp" />
                <Button
                    android:id="@+id/button30"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@{gameViewModel.game.getCard(3,0).publicValue()}"
                    android:onClick="@{() -> gameViewModel.cardClicked(3,0)}"
                    android:enabled="@{!gameViewModel.game.getCard(3,0).alreadyMatched}"
                    tools:text="F"
                    android:textSize="34sp"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <Button
                    android:id="@+id/button01"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@{gameViewModel.game.getCard(0,1).publicValue()}"
                    android:onClick="@{() -> gameViewModel.cardClicked(0,1)}"
                    android:enabled="@{!gameViewModel.game.getCard(0,1).alreadyMatched}"
                    tools:text="B"
                    android:textSize="34sp"/>

                <Button
                    android:id="@+id/button11"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@{gameViewModel.game.getCard(1,1).publicValue()}"
                    android:onClick="@{() -> gameViewModel.cardClicked(1,1)}"
                    android:enabled="@{!gameViewModel.game.getCard(1,1).alreadyMatched}"
                    tools:text="C"
                    android:textSize="34sp"/>

                <Button
                    android:id="@+id/button21"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@{gameViewModel.game.getCard(2,1).publicValue()}"
                    android:onClick="@{() -> gameViewModel.cardClicked(2,1)}"
                    android:enabled="@{!gameViewModel.game.getCard(2,1).alreadyMatched}"
                    tools:text="C"
                    android:textSize="34sp"/>
                <Button
                    android:id="@+id/button31"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@{gameViewModel.game.getCard(3,1).publicValue()}"
                    android:onClick="@{() -> gameViewModel.cardClicked(3,1)}"
                    android:enabled="@{!gameViewModel.game.getCard(3,1).alreadyMatched}"
                    tools:text="F"
                    android:textSize="34sp"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <Button
                    android:id="@+id/button02"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@{gameViewModel.game.getCard(0,2).publicValue()}"
                    android:onClick="@{() -> gameViewModel.cardClicked(0,2)}"
                    android:enabled="@{!gameViewModel.game.getCard(0,2).alreadyMatched}"
                    tools:text="D"
                    android:textSize="34sp"/>

                <Button
                    android:id="@+id/button12"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@{gameViewModel.game.getCard(1,2).publicValue()}"
                    android:onClick="@{() -> gameViewModel.cardClicked(1,2)}"
                    android:enabled="@{!gameViewModel.game.getCard(1,2).alreadyMatched}"
                    tools:text="D"
                    android:textSize="34sp"/>

                <Button
                    android:id="@+id/button22"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@{gameViewModel.game.getCard(2,2).publicValue()}"
                    android:onClick="@{() -> gameViewModel.cardClicked(2,2)}"
                    android:enabled="@{!gameViewModel.game.getCard(2,2).alreadyMatched}"
                    tools:text="E"
                    android:textSize="34sp"/>
                <Button
                    android:id="@+id/button32"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@{gameViewModel.game.getCard(3,2).publicValue()}"
                    android:onClick="@{() -> gameViewModel.cardClicked(3,2)}"
                    android:enabled="@{!gameViewModel.game.getCard(3,2).alreadyMatched}"
                    tools:text="E"
                    android:textSize="34sp"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <Button
                    android:id="@+id/button03"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@{gameViewModel.game.getCard(0,3).publicValue()}"
                    android:onClick="@{() -> gameViewModel.cardClicked(0,3)}"
                    android:enabled="@{!gameViewModel.game.getCard(0,3).alreadyMatched}"
                    tools:text="F"
                    android:textSize="34sp"/>

                <Button
                    android:id="@+id/button13"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@{gameViewModel.game.getCard(1,3).publicValue()}"
                    android:onClick="@{() -> gameViewModel.cardClicked(1,3)}"
                    android:enabled="@{!gameViewModel.game.getCard(1,3).alreadyMatched}"
                    tools:text="F"
                    android:textSize="34sp"/>

                <Button
                    android:id="@+id/button23"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@{gameViewModel.game.getCard(2,3).publicValue()}"
                    android:onClick="@{() -> gameViewModel.cardClicked(2,3)}"
                    android:enabled="@{!gameViewModel.game.getCard(2,3).alreadyMatched}"
                    tools:text="G"
                    android:textSize="34sp"/>

                <Button
                    android:id="@+id/button33"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@{gameViewModel.game.getCard(3,3).publicValue()}"
                    android:onClick="@{() -> gameViewModel.cardClicked(3,3)}"
                    android:enabled="@{!gameViewModel.game.getCard(3,3).alreadyMatched}"
                    tools:text="G"
                    android:textSize="34sp"/>
            </LinearLayout>

        </LinearLayout>

        <TextView
            android:id="@+id/tvTotalCardReversedLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:text="@string/totalCardsReversed"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tvTotalCardsReversedValue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            tools:text="22"
            android:text="@{String.valueOf(gameViewModel.game.totalCardsReversed)}"
            app:layout_constraintBottom_toBottomOf="@+id/tvTotalCardReversedLabel"
            app:layout_constraintStart_toEndOf="@+id/tvTotalCardReversedLabel"
            app:layout_constraintTop_toTopOf="@+id/tvTotalCardReversedLabel" />

        <TextView
            android:id="@+id/tvCurrentPlayer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:textStyle="bold"
            android:text="@string/currentPlayer"
            app:layout_constraintStart_toStartOf="@+id/tvTotalCardReversedLabel"
            app:layout_constraintTop_toBottomOf="@+id/tvTotalCardReversedLabel" />

        <TextView
            android:id="@+id/tvCurrentPlayerValue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:text="Albert"
            android:text="@{gameViewModel.game.currentPlayer.name}"
            app:layout_constraintStart_toStartOf="@+id/tvTotalCardsReversedValue"
            app:layout_constraintTop_toTopOf="@+id/tvCurrentPlayer" />

        <TextView
            android:id="@+id/tvCurrentPlayerPoints"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/points"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="@+id/tvTotalCardReversedLabel"
            app:layout_constraintTop_toBottomOf="@+id/tvCurrentPlayer" />

        <TextView
            android:id="@+id/tvCurrentPlayerPointsValue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:text="0"
            android:text="@{String.valueOf(gameViewModel.game.currentPlayer.points)}"
            app:layout_constraintStart_toStartOf="@+id/tvTotalCardsReversedValue"
            app:layout_constraintTop_toTopOf="@+id/tvCurrentPlayerPoints" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
